# ko-pii

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/: build_eval_corpus.py  build_external_eval_v2.py  generated_eval.README.md  generated_eval.jsonl  generated_eval_large.README.md  generated_eval_large.jsonl  inject_pii_corpus.py
data/corpus/: eval_corpus.jsonl  external_inject_v2.jsonl
data/eval/: eval_injected_corpus.py  eval_naver_changwon_ner.py  eval_openai_klue_ner.py  eval_openai_synth.py  eval_openmed_all.py  eval_presidio_all.py
data/kdpii/: README.md
data/labeling/: GUIDE.md  label_ui.py  labeling_sample.jsonl  make_sample.py  score_labeled.py
data/results/: bootstrap_detections.txt  eval_corpus_kpii.txt  injected_full_eval.txt  kdpii_3way_full.txt  klue_ner_openai_full.txt  naver_changwon_ner_eval.txt  presidio_injected_default.txt  presidio_injected_kr_adapt.txt  presidio_kdpii_default.txt  presidio_kdpii_kr_adapt.txt  presidio_klue_default.txt  presidio_klue_kr_adapt.txt  presidio_synth_default.txt  presidio_synth_kr_adapt.txt  synth_enhanced_kpii.txt  synth_enhanced_openai.txt
data/tools/: count_bootstrap_detections.py  fetch_corpus.py
demo/: app.py
docs/: BENCHMARK.md  EVALUATION_REPORT.md  HYBRID_NER.md  annotation_policy.md  domain_fit_report.md  integration_mcp.md  integration_openai_privacy_filter.md  integration_presidio.md  pattern_analysis.md  user_megademo.html
docs/presentation/: README.md  ko-pii-발표.html  ko-pii-발표.md  ko-pii-소개.md  ko-pii-종합비교.md
eval/: blueteam.py
experiments/ko-output-guard/: README.md  pyproject.toml
experiments/ko-output-guard/eval/: blueteam.py  external_toxicity.py  tier2_cascade_demo.py
experiments/ko-output-guard/src/ko_output_guard/: __init__.py  guard.py  normalize.py  policy.py  result.py
experiments/ko-output-guard/src/ko_output_guard/detectors/: __init__.py  pii_leak.py  prompt_leak.py  secret.py  toxicity.py  unsafe_advice.py
experiments/ko-output-guard/tests/: test_output_guard.py
experiments/ko-prompt-guard/: .gitignore  CONCEPT.md  LICENSE  README.md  pyproject.toml
experiments/ko-prompt-guard/eval/: corpus.py  measure.py
experiments/ko-prompt-guard/src/ko_prompt_guard/: __init__.py  guard.py  patterns.py  policy.py  result.py  semantic.py
experiments/ko-prompt-guard/src/ko_prompt_guard/normalize/: __init__.py  homoglyph.py  jamo.py  leet.py  spacing.py  unicode_base.py
experiments/ko-prompt-guard/tests/: conftest.py  test_deterministic.py  test_normalize.py  test_redteam_corpus.py  test_robustness.py
experiments/ko-sqlguard/: .gitignore  README.md  pyproject.toml
experiments/ko-sqlguard/dev/: REDTEAM.md  cost_probe.py  probe2.py  probe3.py  probe_sqlglot.py  redteam_harness.py  redteam_workflow.js  reverify.py  streamlit_app.py  try.py
experiments/ko-sqlguard/eval/: corpus.py  measure.py
experiments/ko-sqlguard/examples/: quickstart.py
experiments/ko-sqlguard/src/ko_sqlguard/: __init__.py  cost.py  guard.py  policy.py  result.py  semantic.py
experiments/ko-sqlguard/src/ko_sqlguard/checks/: __init__.py  _ast.py  allowlist.py  cartesian.py  functions.py  limit.py  statement_type.py  tautology.py  where.py
experiments/ko-sqlguard/tests/: conftest.py  test_adversarial.py  test_cost.py  test_demo_safety.py  test_deterministic.py  test_redteam_regression.py  test_robustness.py  test_transform.py
experiments/ko-sqlguard/tests/fixtures/: redteam.sql
experiments/ner/: MODEL_CARD.md  README.md  TRAINING_LOG.md  runs.json
experiments/ner/code/: checksum_probe.py  eval_suite.py  eval_suite.sbatch  external_eval.py  external_eval.sbatch  gemma4_train.sbatch  gemma4_train_ner.py  hybrid_eval.py  hybrid_eval.sbatch  mask_demo.py  requirements.txt  train_ner.py  train_ner.sbatch  verified_eval.py  verified_eval.sbatch
experiments/ner/results/: evalsuite-klue-all.json  evalsuite-klue-base.json  evalsuite-klue-fuzzy.json  external-eval.json  gemma4-e2b-all-hilr.json  gemma4-e2b-all.json  klue-3ep-a.json  klue-3ep-b.json  klue-6ep-lr3e5.json  klue-6ep.json  klue-all.json  openai-pf-lr1e4.json  openai-pf-lr2e5.json  verified-klue-all.json
scripts/: build_address_gazetteer.py
src/ko_pii/: __init__.py  anonymizer.py  batch.py  cli.py  detect.py  labels.py  tabular.py
src/ko_pii/analytics/: __init__.py  combined_risk.py  k_anonymity.py
src/ko_pii/checksum/: corp_reg_checksum.py
src/ko_pii/classifier/: __init__.py  cli.py  hybrid.py  predict.py  tfidf_baseline.py  train.py
src/ko_pii/context/: __init__.py  context_rules.py  name_dictionary.py  name_origin.py  name_syllables.py  romanization.py
src/ko_pii/core/: modes.py  overlap.py  types.py  unicode_norm.py
src/ko_pii/dictionaries/: __init__.py  common_words.py  legal_dongs.py  surnames.py
src/ko_pii/domain/: __init__.py  civil_petition.py  government.py  hr.py
src/ko_pii/eval/: __init__.py  benchmark.py  dataset_integrity.py  fp_collector.py  kdpii.py  klue_benchmark.py  klue_ner.py  metrics.py  model_comparison.py  presidio_compare.py  synth.py
src/ko_pii/generalization/: __init__.py
src/ko_pii/integrations/: __init__.py  base.py  hf_token_ner.py  hybrid.py  langchain.py  llamaindex.py  mcp_server.py  openai_privacy_filter.py  presidio_plugin.py
src/ko_pii/io_/: __init__.py  csv_reader.py  dispatcher.py  hwp.py  hwpx.py  pdf.py  text_normalizer.py  xlsx.py
src/ko_pii/legal/: __init__.py  mapping.py
src/ko_pii/modes/: __init__.py  _apply.py  fpe.py  hashed.py  partial.py  redact.py  tokenize.py
src/ko_pii/patterns/: account.py  address.py  birth.py  business_reg.py  card.py  corp_reg.py  (+18 more)
tests/integration/: test_end_to_end.py
tests/unit/: test_anonymizer.py  test_batch.py  test_cli.py  test_detect_all.py  test_digit_evasion.py  test_fp_stress.py  test_labels.py  test_leak_hunt_fixes.py  test_modes_policy.py  test_performance.py  test_robustness.py  test_tabular.py  test_version.py
(+101 files in other folders)
