[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ko-sqlguard"
version = "0.1.0"
description = "Deterministic, parse-only guardrails for LLM-generated PostgreSQL queries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mk04" }]
keywords = ["sql", "guardrail", "llm", "postgresql", "security", "sqlglot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Security",
]
dependencies = [
    "sqlglot>=25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
demo = [
    "streamlit>=1.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ko_sqlguard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: requires a live PostgreSQL (set KO_SQLGUARD_TEST_DSN)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests embed long, literal SQL payloads that must not be reflowed.
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "sqlglot.*"
ignore_missing_imports = true
